# shed

./: README.md  fan.py  install.sh  kitt.py  lights.py  pyproject.toml  sensor.py
systemd/: dht-sensor.service  fan.service  kitt.service  lights.service
