[project]
name = "dht"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.13.0",
    "jinja-cli>=1.2.2",
    "paho-mqtt>=2.1.0",
    "pigpio>=1.78",
    "py-ahtx0>=0.1.2",
    "python-dotenv>=1.2.2",
    "smbus2>=0.6.1",
]
